--- a/views/about_website/about_website.templ
+++ b/views/about_website/about_website.templ
@@ -2,6 +2,7 @@ package about_website
 
 templ AboutWebsite() {
 	<div class="container mx-auto mt-4">
-		This website has been created with templ+go stack (using htmx, alpinejs and tailwindcss).
+		<p>Why is this website so fast? Because it has been created with templ+go stack (using htmx, alpinejs and tailwindcss).</p>
+		<p clas="mt-4">Also, this website is running on my 2-Raspberry Pi cluster (k3s) at home, but it is proxied so you don't know my IP :)</p>
 	</div>
 }
