--- a/views/components/navigation.templ
+++ b/views/components/navigation.templ
@@ -5,7 +5,7 @@ templ Navigation() {
 		<div class="container px-6 py-4 mx-auto">
 			<div class="lg:flex lg:items-center">
 				<div class="flex items-center justify-between">
-					<a href="#">
+					<a href="/">
 						<svg class="w-auto h-6 sm:h-7" width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 							<style>
                                 .background { fill: #4A90E2; }
