--- a/views/about_website/about_website.templ
+++ b/views/about_website/about_website.templ
@@ -1,8 +1,9 @@
 package about_website
 
 templ AboutWebsite() {
-	<div class="container mx-auto mt-4">
-		<p>Why is this website so fast? Because it has been created with templ+go stack (using htmx, alpinejs and tailwindcss).</p>
-		<p clas="mt-4">Also, this website is running on my 2-Raspberry Pi cluster (k3s) at home, but it is proxied so you don't know my IP :)</p>
+	<div class="container mx-auto mt-4 text-lg">
+		<h1 class="text-4xl mb-6">About this website</h1>
+		<p class="mb-4"><b>Why is this website so fast?</b> Because it has been created with templ+go stack (using htmx, alpinejs and tailwindcss).</p>
+		<p class="mb-4"><b>Well doesn't seem so fast to me...</b> Also, this website is running on my 2-Raspberry Pi cluster (k3s) at home, and also it's proxied through a public VM so you don't know my IP :)</p>
 	</div>
 }
