--- a/views/about_me/about_me.templ
+++ b/views/about_me/about_me.templ
@@ -1,7 +1,7 @@
 package about_me
 
 templ AboutMe() {
-	<div class="container mx-auto mt-4 text-lg">
+	<div class="container text-lg mx-2 md:mx-auto mt-4">
 		<h1 class="text-4xl mb-6">About me</h1>
 		<p class="mb-4">My name is <b>Guillem Bonet</b> and I am a Software Engineer.</p>
 		<p class="mb-4">My main language is Go.</p>
