--- a/views/echo/echo.templ
+++ b/views/echo/echo.templ
@@ -1,7 +1,7 @@
 package echo
 
 templ Echo(value string) {
-	<div class="container mx-auto mt-4">
+	<div class="container mx-2 md:mx-auto mt-4">
 		<div class="max-w-2xl px-8 py-4 bg-white rounded-lg shadow-md dark:bg-gray-800 mx-auto">
 			<div class="my-2">
 				<p class="text-xl font-bold text-gray-700 dark:text-white hover:text-gray-600 dark:hover:text-gray-200 hover:underline">{ value }</p>
