fixes and improvements
Signed-off-by: Guillem Bonet <guillem.bonet@gmail.com>

--- a/views/about_website/about_website.templ
+++ b/views/about_website/about_website.templ
@@ -4,6 +4,6 @@ templ AboutWebsite() {
 	<div class="container text-lg mx-2 md:mx-auto mt-4 dark:text-white">
 		<h1 class="text-4xl mb-6">About this website</h1>
 		<p class="mb-4"><b>Why is this website so fast?</b> Because it has been created with templ+go stack (using htmx, alpinejs and tailwindcss).</p>
-		<p class="mb-4"><b>Well doesn't seem so fast to me...</b> Also, this website is running on my 2-Raspberry Pi cluster (k3s) at home, and also it's proxied through a public VM so you don't know my IP :)</p>
+		<p class="mb-4"><b>Well, it doesn't seem so fast to me...</b> Also, this website is running on my 2-Raspberry Pi cluster (k3s) at home, and also it's proxied through a public VM so you don't know my IP :)</p>
 	</div>
 }
