--- a/views/blog/blog.templ
+++ b/views/blog/blog.templ
@@ -3,17 +3,17 @@ package blog
 import "github.com/guillembonet/bunetz/blog_posts"
 
 templ Blog() {
-	<div class="container mx-2 md:mx-auto mt-4 dark:text-white">
+	<div class="container px-6 md:mx-auto mt-4 dark:text-white">
 		<h1 class="text-4xl mb-5">Bunetz's Blog</h1>
-		<h2 class="text-2xl mb-3">Welcome to my Blog!</h2>
-		<h3 class="text-lg mb-2">Here you can find all my blog posts. I intend to write about different topics related to software engineering which I believe someone might find useful.</h3>
-		<div hx-get="/blog/posts" hx-trigger="load"></div>
+		<h2 class="text-3xl mb-3">Welcome to my Blog!</h2>
+		<h3 class="text-xl mb-2">Here you can find all my blog posts. I intend to write about different topics related to software engineering which I believe someone might find useful.</h3>
+		<div hx-get="/blog/posts" hx-trigger="load" class="text-xl"></div>
 	</div>
 }
 
 templ BlogPostsCards(blogPosts []blog_posts.BlogPost) {
 	if len(blogPosts) == 0 {
-		<p class="mt-4">Oh! Sadly there are no blog posts yet, check again soon!</p>
+		<p class="my-4">Oh! Sadly there are no blog posts yet, check again soon!</p>
 	} else {
 		<div class="container px-6 py-10 mx-auto">
 			<div hx-boost="true" hx-target="#content" hx-swap="innerHTML show:window:top" class="grid grid-cols-1 gap-8 mt-8 lg:grid-cols-2">
@@ -21,7 +21,7 @@ templ BlogPostsCards(blogPosts []blog_posts.BlogPost) {
 					<div>
 						<img class="relative z-10 object-contain w-full rounded-md h-96" src={ post.PreviewImagePath } alt={ post.PreviewImageAlt }/>
 						<div class="relative z-20 max-w-lg p-6 mx-auto -mt-20 bg-white rounded-md shadow dark:bg-gray-900">
-							<a href={ templ.URL("/blog/posts/" + post.ID) } class="font-semibold text-gray-800 hover:underline md:text-xl dark:text-white">
+							<a href={ templ.URL("/blog/posts/" + post.ID) } class="font-semibold text-gray-800 hover:underline dark:text-white">
 								{ post.Title }
 							</a>
 							<p class="mt-3 text-sm text-gray-500 dark:text-gray-300 md:text-sm">
