--- a/views/blog/post.templ
+++ b/views/blog/post.templ
@@ -1,7 +1,7 @@
 package blog
 
 templ Post(title string, content []byte) {
-	<div class="container mx-auto mt-4 p-4 md:px-10 lg:px-20 xl:px-40 dark:text-white">
+	<div class="container mx-auto my-4 p-4 md:px-10 lg:px-20 xl:px-40 dark:text-white">
 		<h1 class="text-4xl py-3">{ title }</h1>
 		<div>
 			@templ.Raw(string(content))
