--- a/views/error_pages/error_pages.templ
+++ b/views/error_pages/error_pages.templ
@@ -8,7 +8,7 @@ templ Error(name, message, submessage string) {
 				<h1 class="mt-3 text-2xl font-semibold text-gray-800 dark:text-white md:text-3xl">{ message }</h1>
 				<p class="mt-4 text-gray-500 dark:text-gray-400">{ submessage }</p>
 				<div class="flex items-center mt-6 gap-x-3">
-					<a href="/">
+					<a href="/" hx-boost="true" hx-target="#content" hx-swap="innerHTML show:window:top">
 						<button class="w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto hover:bg-blue-600 dark:hover:bg-blue-500 dark:bg-blue-600">
 							Take me home
 						</button>
