--- a/views/blog/blog.templ
+++ b/views/blog/blog.templ
@@ -20,7 +20,7 @@ templ BlogPostsCards(blogPosts []blog_posts.BlogPost) {
 				for _, post := range blogPosts {
 					<div>
 						<img class="relative z-10 object-contain w-full rounded-md h-96" src={ post.PreviewImagePath } alt={ post.PreviewImageAlt }/>
-						<div class="relative z-20 max-w-lg p-6 mx-auto -mt-20 bg-white rounded-md shadow dark:bg-gray-900">
+						<div class="relative z-20 max-w-lg p-6 mx-auto -mt-20 bg-slate-100 rounded-md shadow dark:bg-gray-900">
 							<a href={ templ.URL("/blog/posts/" + post.ID) } class="font-semibold text-gray-800 hover:underline dark:text-white">
 								{ post.Title }
 							</a>
