--- a/views/error_pages/error_pages.templ
+++ b/views/error_pages/error_pages.templ
@@ -1,7 +1,7 @@
 package error_pages
 
 templ Error(name, message, submessage string) {
-	<section class="bg-white dark:bg-gray-900 flex grow">
+	<section class="flex grow">
 		<div class="container flex items-center grow px-6 py-12 mx-auto">
 			<div>
 				<p class="text-sm font-medium text-blue-500 dark:text-blue-400">{ name }</p>
