--- a/views/about_me/about_me.templ
+++ b/views/about_me/about_me.templ
@@ -19,29 +19,25 @@ templ AboutMe() {
 		<p class="mb-4">
 			To contact me use the form below, message me on <a href="https://www.linkedin.com/in/guillembonet" class="text-sky-600 dark:text-cyan-400">LinkedIn</a>, or send an email to <b><u>hello</u></b> at <b><u>bunetz.dev</u></b>.
 		</p>
-
 		<div class="w-full flex justify-center my-20">
 			<div class="lg:w-1/2 lg:mx-6">
 				<div
-					class="w-full px-8 py-10 mx-auto overflow-hidden bg-white rounded-lg shadow-2xl dark:bg-gray-900 lg:max-w-xl shadow-gray-300/50 dark:shadow-black/50">
+					class="w-full px-8 py-10 mx-auto overflow-hidden bg-slate-100 rounded-lg shadow-2xl dark:bg-gray-900 lg:max-w-xl shadow-gray-300/50 dark:shadow-black/50"
+				>
 					<h2 class="text-xl font-bold">Contact me</h2>
-
 					<form hx-post="/contact" class="mt-6">
 						<div class="flex-1">
 							<label class="block mb-2 text-md text-gray-600 dark:text-gray-200">Your Name</label>
-							<input name="name" type="text" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+							<input name="name" type="text" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-slate-100 border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"/>
 						</div>
-
 						<div class="flex-1 mt-6">
 							<label class="block mb-2 text-md text-gray-600 dark:text-gray-200">Email (or other contact form)</label>
-							<input name="contact" type="text" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+							<input name="contact" type="text" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-slate-100 border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"/>
 						</div>
-
 						<div class="w-full mt-6">
 							<label class="block mb-2 text-md text-gray-600 dark:text-gray-200">Message</label>
-							<textarea name="message" class="block w-full h-32 px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md md:h-48 dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"></textarea>
+							<textarea name="message" class="block w-full h-32 px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-slate-100 border border-gray-200 rounded-md md:h-48 dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"></textarea>
 						</div>
-
 						<button type="submit" class="w-full px-6 py-3 mt-6 text-md font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
 							get in touch
 						</button>
