--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -22,6 +22,8 @@ templ Base(title, description string) {
 			<script src="/assets/js/head-support.min.js" hx-preserve="true" defer></script>
 			<script src="/assets/js/alpine.min.js" hx-preserve="true"></script>
 			<link href="/assets/css/tailwind.css" rel="stylesheet" hx-preserve="true"/>
+			<script src="/assets/js/toastify.min.js" hx-preserve="true" defer></script>
+			<link href="/assets/css/toastify.min.css" rel="stylesheet" hx-preserve="true"/>
 			<script hx-preserve="true">
 				if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
 					document.documentElement.classList.add('dark')
@@ -38,14 +40,43 @@ templ Base(title, description string) {
 					localStorage.theme = theme
 					document.documentElement.classList.toggle('dark', theme === 'dark')
 				}
+
+				function isServerError(request) {
+					return request.status >= 400
+				}
+
+				function handleServerError(event) {
+					if (isServerError(event.detail.xhr)) {
+						event.detail.shouldSwap = true
+						event.detail.isError = false
+					}
+				}
+
+				function errorToast(message) {
+					Toastify({
+						text: message,
+						duration: 5000,
+						newWindow: true,
+						close: true,
+						gravity: 'top',
+						position: 'right',
+						backgroundColor: 'red',
+						stopOnFocus: true,
+					}).showToast()
+				}
 			</script>
 		</head>
 		<body class="antialiased min-h-screen flex flex-col" hx-ext="head-support">
 			@components.Navigation()
-			<div id="content" class={ "flex flex-grow " + views.DefaultBackgroundClass } hx-on:htmx:before-swap="event.detail.shouldSwap = true; event.detail.isError = false;">
+			<div
+				id="content"
+				class={ "flex flex-grow " + views.DefaultBackgroundClass }
+				hx-on:htmx:before-swap="handleServerError(event)"
+				hx-on:htmx:send-error="errorToast('A network error occurred')"
+			>
 				{ children... }
 			</div>
-			<footer class="bg-white dark:bg-gray-900">
+			<footer class="bg-slate-100 dark:bg-gray-900">
 				<div hx-boost="true" hx-target="#content" hx-swap="innerHTML show:window:top" class="container flex flex-col items-center justify-between px-6 py-8 mx-auto lg:flex-row">
 					<a href="/" aria-label="Back to homepage">
 						<svg class="w-auto h-7" width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
