--- a/views/about_me/contact.templ
+++ b/views/about_me/contact.templ
@@ -1,6 +1,36 @@
 package about_me
 
-templ Contact(message string) {
-    <p class="mb-4">Sorry, I lied and didn't implement this yet. Here is your message so you can send it elsewhere:</p>
-    <p>{ message }</p>
+templ Contact(name, nameError, contact, contactError, message, messageError string) {
+	<form hx-post="/contact" class="mt-6">
+		<div class="flex-1">
+			<label class="block mb-2 text-md text-gray-600 dark:text-gray-200">Your Name</label>
+			<input name="name" type="text" value={ name } class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-slate-100 border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"/>
+			if (nameError != "") {
+				<p class="text-red-500 text-xs italic">{ nameError }</p>
+			}
+		</div>
+		<div class="flex-1 mt-6">
+			<label class="block mb-2 text-md text-gray-600 dark:text-gray-200">Email (or other contact form)</label>
+			<input name="contact" type="text" value={ contact } class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-slate-100 border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"/>
+			if (contactError != "") {
+				<p class="text-red-500 text-xs italic">{ contactError }</p>
+			}
+		</div>
+		<div class="w-full mt-6">
+			<label class="block mb-2 text-md text-gray-600 dark:text-gray-200">Message</label>
+			<textarea name="message" class="block w-full h-32 px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-slate-100 border border-gray-200 rounded-md md:h-48 dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40">
+				{ message }
+			</textarea>
+			if (messageError != "") {
+				<p class="text-red-500 text-xs italic">{ messageError }</p>
+			}
+		</div>
+		<button type="submit" class="w-full px-6 py-3 mt-6 text-md font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+			get in touch
+		</button>
+	</form>
+}
+
+templ ContactSuccess() {
+	<p class="mb-4">Your message has been sent! Thanks!</p>
 }
