update message about private repo
Signed-off-by: Guillem Bonet <guillem.bonet@gmail.com>

--- a/views/about_website/about_website.templ
+++ b/views/about_website/about_website.templ
@@ -17,7 +17,7 @@ templ AboutWebsite() {
 			It will only get the necessary fragment and will take around 1kB. I think you get the idea...
 		</p>
 		<p class="mb-6">
-			You can find the source code of this website on <a href="https://github.com/guillembonet/bunetz" class="text-sky-600 dark:text-cyan-400 inline-block">Github</a>, for now it is private, but I will make it public when I am done with the first version.
+			You can find the source code of this website on <a href="https://github.com/guillembonet/bunetz" class="text-sky-600 dark:text-cyan-400 inline-block">Github</a>.
 		</p>
 		<h2 class="text-3xl mb-6">Hosting it</h2>
 		<p class="mb-4">
